--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
   - pip install -r requirements.devel.txt
 
 script:
-  - python setup.py lint
+  #- python setup.py lint
   - python setup.py test
