--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 ---
 language: python
-sudo: false
+sudo: required
+warnings_are_errors: true
 python:
-  - 2.7
+    - 2.7
 
 install:
-  - pip install -r requirements.devel.txt
+    - pip install -r requirements.devel.txt
+    - pip install coveralls
 
 script:
-  #- python setup.py lint
-  - python setup.py test
+    #- python setup.py lint
+    - python setup.py test
+    - coverage run --source=portal manage.py test
+after_success:
+    coveralls
